[gd_scene load_steps=12 format=2]

[ext_resource path="res://Logics/event/Player_NEW.gd" type="Script" id=1]
[ext_resource path="res://Sprites/trchar000.png" type="Texture" id=2]
[ext_resource path="res://animations/walking_animationPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Logics/event/Trainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Characters/trainer000.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Characters/trback000.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "jump"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ), Vector2( 0, -48 ), Vector2( 0, -24 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk_down_prova"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_down_step1_prova"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_down_step2_prova"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]

[node name="Player" type="Area2D" groups=[
"Player",
]]
position = Vector2( -80, -48 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 0, 4 )
vframes = 4
hframes = 4
frame = 11

[node name="AnimationPlayer" parent="." instance=ExtResource( 3 )]
anims/jump = SubResource( 1 )
anims/walk_down_prova = SubResource( 2 )
anims/walk_down_step1_prova = SubResource( 4 )
anims/walk_down_step2_prova = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="Trainer" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
battle_front_sprite = ExtResource( 5 )
battle_back_sprite = ExtResource( 6 )
is_playable = true

[node name="pkm1" parent="Trainer" index="0"]
pkm_id = 1
hp = 1
nature_id = 19

[node name="pkm2" parent="Trainer" index="1"]
pkm_id = 2
gender = 1
hp = 20
ability_id = 17
nature_id = 22

[node name="pkm3" parent="Trainer" index="2"]
pkm_id = 3
hp = 25
ability_id = 26
nature_id = 19

[node name="pkm4" parent="Trainer" index="3"]
pkm_id = 4
gender = 1
hp = 25
ability_id = 33
nature_id = 20

[node name="pkm5" parent="Trainer" index="4"]
pkm_id = 6
hp = 21
ability_id = 30
nature_id = 4

[node name="pkm6" parent="Trainer" index="5"]
gender = 1
hp = 13
ability_id = 35
nature_id = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -32, 0 )

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -32 )

[node name="MoveTween" type="Tween" parent="."]
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]

[editable path="Trainer"]
